versions/26.1.2/develop/rendering/world.md
---
title: Rendering in the World
description: Create and use custom render pipelines when vanilla pipelines don't suit your needs.
authors:
  - AzureAaron
  - kevinthegreat1
---

<!---->

::: info PREREQUISITES

Make sure you've read [Rendering Concepts](./basic-concepts) first. This page builds on those concepts and discusses how to render objects in the world.

This page explores some more modern rendering concepts. You'll learn more about the two split phases of rendering: "extraction" (or "preparation") and "drawing" (or "rendering"). In this guide, we will refer to the "extraction/preparation" phase as the "extraction" phase and the "drawing/rendering" phase as the "drawing" phase.

:::

To render custom objects in the world, you have two choices. You can inject into existing vanilla rendering and add your code, but that limits you to existing vanilla render pipelines. If existing vanilla render pipelines don't suit your needs, you need a custom render pipeline.

Before we get into custom render pipelines, let's look at vanilla rendering.

## The Extraction and Drawing Phases {#the-extraction-and-drawing-phases}

As mentioned in [Rendering Concepts](./basic-concepts), recent Minecraft updates are working on splitting rendering into two phases: "extraction" and "drawing".

All data needed for rendering is collected during the "extraction" phase. This includes, for example, accessing world data. Note that even though many methods are prefixed with `draw` or `render`, they should be called during the "extraction" phase. You should add all elements you want to render during this phase.

When the "extraction" phase is done, the "drawing" phase starts, and the buffered builder is built. During this phase, the buffered builder is drawn to the screen. The ultimate goal of this "extraction" and "drawing" split is to allow for drawing the previous frame in parallel to extracting the next frame, improving performance.

Now, with these two phases in mind, let's look at how to create a custom render pipeline.

## Custom Render Pipelines {#custom-render-pipelines}

Let's say we want to render waypoints, which should appear through walls. The closest vanilla pipeline for that would be `RenderPipelines#DEBUG_FILLED_BOX`, but it doesn't render through walls, so we will need a custom render pipeline.

### Defining a Custom Render Pipeline {#defining-a-custom-render-pipeline}

We define a custom render pipeline in a class:

<<< @/reference/26.1.2/src/client/java/com/example/docs/rendering/CustomRenderPipeline.java#custom_pipelines_define_pipeline

### Extraction Phase {#extraction-phase}

We first implement the "extraction" phase. We can call this method during the "extraction" phase to add a waypoint to be rendered.

<<< @/reference/26.1.2/src/client/java/com/example/docs/rendering/CustomRenderPipeline.java#custom_pipelines_extraction_phase

If you want to render multiple waypoints, change `waypointState` into a list and add multiple waypoint render states. Make sure you do so during the "extraction" phase, BEFORE the "drawing" phase starts, at which point the buffer builder is built.

### Render States {#render-states}

Note that in the above code we are saving the `WaypointRenderState` in a field. This is because we need it in the "drawing" phase. In this case, the `WaypointRenderState` is our "render state" or "extracted data". If you need additional data (i.e. from the world) during the "drawing" phase, you should add it to your custom render state class.

### Drawing Phase {#drawing-phase}

Now we'll implement the "drawing" phase. This should be called after all waypoints you want to render have been added to the `waypointState` during the "extraction" phase.

<<< @/reference/26.1.2/src/client/java/com/example/docs/rendering/CustomRenderPipeline.java#custom_pipelines_drawing_phase

Note that the size used in the `ByteBufferBuilder` constructor depends on the render pipeline you are using. In our case, it is `RenderType.SMALL_BUFFER_SIZE`.

### Cleaning up {#cleaning-up}

Finally, we need to clean up resources when the game renderer is closed. `GameRenderer#close` should call this method, and for that you currently need to inject into `GameRenderer#close` with a mixin.

<<< @/reference/26.1.2/src/client/java/com/example/docs/rendering/CustomRenderPipeline.java#custom_pipelines_clean_up
<<< @/reference/26.1.2/src/client/java/com/example/docs/mixin/client/GameRendererMixin.java

### Final Code {#final-code}

Combining all the steps from above, we get a simple class that renders a waypoint at `(0, 100, 0)` through walls.

<<< @/reference/26.1.2/src/client/java/com/example/docs/rendering/CustomRenderPipeline.java

Don't forget the `GameRendererMixin` as well! Here is the result:

![A waypoint rendering through walls](/assets/develop/rendering/world-rendering-custom-render-pipeline-waypoint.png)
